# shadow-terminal

./: .gitignore  Cargo.toml  README.md  output-schema.json
.github/workflows/: cd.yml  ci.yaml
shadow-terminal/: CHANGELOG.md  Cargo.toml
shadow-terminal-cli/: CHANGELOG.md  Cargo.toml
shadow-terminal-cli/src/: app.rs  cli_args.rs  main.rs
shadow-terminal/src/: active_terminal.rs  lib.rs  pty.rs  shadow_terminal.rs  steppable_terminal.rs
shadow-terminal/src/output/: foreign.rs  native.rs
src/: lib.rs  pty.rs
